--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@
         android:inputType="textPassword"
         android:drawableLeft="@drawable/password"/>
     <TextView
+        android:layout_marginTop="10dp"
         android:id="@+id/tv_forget_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +53,8 @@
         android:textStyle="bold"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:layout_marginTop="20dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,4 +62,14 @@
         android:text="or login using your"
         android:textSize="18sp"
         android:textStyle="bold"/>
+    <Button
+        android:id="@+id/btn_Phone"
+        android:drawableLeft="@drawable/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:text="Phone"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="30dp"/>
 </LinearLayout>
