--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -3,13 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatsFragment">
+    tools:context=".RequestsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/chat_list"
+        android:id="@+id/chat_request_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
