--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -48,6 +48,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:src="@drawable/send_message"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:backgroundTint="@android:color/white"/>
     </RelativeLayout>
 </RelativeLayout>
