--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="write phone number here..."
-        android:gravity="center"/>
+        android:gravity="center"
+        android:visibility="visible"/>
     <EditText
         android:id="@+id/edt_verification"
         android:layout_below="@id/edt_phone"
@@ -34,7 +35,8 @@
         android:text="Send Verification Code"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:visibility="visible"/>
     <Button
         android:id="@+id/btn_verify"
         android:layout_width="match_parent"
