--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
+
+    <include
+        layout="@layout/layout_app_bar"
+        android:id="@+id/settings_toolbar">
+    </include>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="250dp"
@@ -13,7 +19,7 @@
         android:src="@drawable/profile_image"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="90dp"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/colorPrimaryDark"/>
     <EditText
@@ -28,7 +34,7 @@
         android:textStyle="bold"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp" />
     <EditText
         android:id="@+id/edit_status"
         android:layout_width="match_parent"
