--- a/app/src/main/res/layout/custom_messages_layout.xml
+++ b/app/src/main/res/layout/custom_messages_layout.xml
@@ -21,11 +21,13 @@
         android:text="receiver messages here"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:padding="10dp"
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_toRightOf="@+id/message_profile_image"
         />
+
     <TextView
         android:id="@+id/sender_message_text"
         android:layout_width="wrap_content"
@@ -40,5 +42,25 @@
         android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@android:color/white"
-        android:layout_marginRight="5dp"/>
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"/>
+
+    <ImageView
+        android:id="@+id/message_sender_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="5dp"
+        android:scaleType="centerCrop"/>
+
+    <ImageView
+        android:id="@+id/message_receiver_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="45dp"
+        android:scaleType="centerCrop"/>
 </RelativeLayout>
