--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/profile_image"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="70dp"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/colorPrimaryDark"/>
     <EditText
@@ -32,9 +32,8 @@
         android:inputType="textMultiLine"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="5dp" />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp" />
     <EditText
         android:id="@+id/edit_status"
         android:layout_width="match_parent"
@@ -44,9 +43,8 @@
         android:hint="status"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"/>
     <Button
         android:id="@+id/btn_update"
         android:layout_width="match_parent"
@@ -56,7 +54,6 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:background="@color/colorPrimaryDark"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 </RelativeLayout>
