--- a/app/src/main/res/layout/users_display_layout.xml
+++ b/app/src/main/res/layout/users_display_layout.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_margin="5dp"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -20,14 +20,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="5dp">
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/tv_user_name"
-                    android:layout_width="250dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="user name"
                     android:textStyle="bold"
                     android:textSize="18sp"/>
@@ -36,16 +35,18 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:src="@drawable/online"
-                    android:layout_marginTop="5dp"
+                    android:layout_margin="5dp"
+                    android:layout_alignParentRight="true"
                     android:visibility="invisible"
                 />
-            </LinearLayout>
+            </RelativeLayout>
             <TextView
                 android:id="@+id/tv_user_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="user status"
-                android:textSize="18sp"
+                android:textSize="14sp"
+                android:maxLines="1"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
